--- a/src/Dyoub.App/Views/Commercial/SaleOrders/SaleOrderDetails.cshtml
+++ b/src/Dyoub.App/Views/Commercial/SaleOrders/SaleOrderDetails.cshtml
@@ -32,74 +32,82 @@
     <div class="loading box" data-ng-show="controller.searching"></div>
 
     <div class="ng-cloak" data-ng-show="controller.searchComplete()">
-        <div class="box">
-            <a href="/sale-orders" class="as-button">
-                <i class="fa fa-arrow-left"></i>
-            </a>
+        <div class="error" data-ng-show="controller.notFound">
+            <i class="fa fa-exclamation-triangle"></i>
+            <p data-translate="Sale order not found."></p>
+            <a href="/sale-orders" class="as-button" data-translate="Go back"></a>
+        </div>
 
-            @using (Html.Authorize("sale-orders.edit"))
+        <div data-ng-hide="controller.notFound">
+            <div class="box">
+                <a href="/sale-orders" class="as-button">
+                    <i class="fa fa-arrow-left"></i>
+                </a>
+
+                @using (Html.Authorize("sale-orders.edit"))
             {
-                <button type="button" class="success" data-translate="Confirm" data-ng-click="controller.showConfirmDialog()"
-                        data-ng-hide="controller.saleOrder.confirmed"></button>
-                <a href="/sale-orders/edit/{{controller.saleOrder.id}}" class="as-button" data-translate="Edit"
-                    data-ng-hide="controller.saleOrder.confirmed"></a>
-                <button type="button" class="danger" data-translate="Remove" data-ng-click="controller.showRemoveDialog()"
-                        data-ng-hide="controller.saleOrder.confirmed"></button>
-                <button type="button" class="danger" data-translate="Revert" data-ng-click="controller.showRevertDialog()"
-                        data-ng-show="controller.saleOrder.confirmed"></button>
-            }
-        </div>
-
-        <div class="box">
-            <span class="hint success" data-ng-show="controller.saleOrder.confirmed" data-translate="Billed"></span>
-        </div>
-
-        <div class="card">
-            <div class="grid-row">
-                <div class="grid-column compact-6 small-6 medium-6 large-6">
-                    <div class="box">
-                        <label data-translate="Store"></label>
-                        <strong data-ng-bind="controller.saleOrder.store.name"></strong>
-                    </div>
-                </div>
-                <div class="grid-column compact-6 small-6 medium-6 large-6">
-                    <div class="box">
-                        <label data-translate="Issue date"></label>
-                        <strong data-ng-bind="controller.saleOrder.issueDate | moment:'shortDate'"></strong>
-                    </div>
-                </div>
-            </div>
-
-            <div class="grid-row">
-                <div class="grid-column medium-6 large-6">
-                    <div class="box">
-                        <label data-translate="Wallet"></label>
-                        <strong data-ng-bind="controller.saleOrder.wallet.name"></strong>
-                        <strong data-ng-hide="controller.saleOrder.wallet.name" data-translate="Not defined"></strong>
-                    </div>
-                </div>
-                <div class="grid-column medium-6 large-6">
-                    <div class="grid-row">
-                        <div class="grid-column compact-6 small-6 medium-6 large-6">
-                            <div class="box">
-                                <label data-translate="Sale total"></label>
-                                <strong data-ng-bind="controller.saleOrder.total | currency"></strong>
-                            </div>
-                        </div>
-                        <div class="grid-column compact-6 small-6 medium-6 large-6">
-                            <div class="box">
-                                <label data-translate="Billed amount"></label>
-                                <strong data-ng-bind="controller.saleOrder.billedAmount | currency"></strong>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                    <button type="button" class="success" data-translate="Confirm" data-ng-click="controller.showConfirmDialog()"
+                            data-ng-hide="controller.saleOrder.confirmed"></button>
+                        <a href="/sale-orders/edit/{{controller.saleOrder.id}}" class="as-button" data-translate="Edit"
+                           data-ng-hide="controller.saleOrder.confirmed"></a>
+                        <button type="button" class="danger" data-translate="Remove" data-ng-click="controller.showRemoveDialog()"
+                                data-ng-hide="controller.saleOrder.confirmed"></button>
+                        <button type="button" class="danger" data-translate="Revert" data-ng-click="controller.showRevertDialog()"
+                                data-ng-show="controller.saleOrder.confirmed"></button>
+                }
             </div>
 
             <div class="box">
-                <label data-translate="Additional information"></label>
-                <strong data-ng-bind-html="controller.saleOrder.additionalInformation | escapeHtml"></strong>
-                <strong data-ng-hide="controller.saleOrder.additionalInformation">-</strong>
+                <span class="hint success" data-ng-show="controller.saleOrder.confirmed" data-translate="Billed"></span>
+            </div>
+
+            <div class="card">
+                <div class="grid-row">
+                    <div class="grid-column compact-6 small-6 medium-6 large-6">
+                        <div class="box">
+                            <label data-translate="Store"></label>
+                            <strong data-ng-bind="controller.saleOrder.store.name"></strong>
+                        </div>
+                    </div>
+                    <div class="grid-column compact-6 small-6 medium-6 large-6">
+                        <div class="box">
+                            <label data-translate="Issue date"></label>
+                            <strong data-ng-bind="controller.saleOrder.issueDate | moment:'shortDate'"></strong>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="grid-row">
+                    <div class="grid-column medium-6 large-6">
+                        <div class="box">
+                            <label data-translate="Wallet"></label>
+                            <strong data-ng-bind="controller.saleOrder.wallet.name"></strong>
+                            <strong data-ng-hide="controller.saleOrder.wallet.name" data-translate="Not defined"></strong>
+                        </div>
+                    </div>
+                    <div class="grid-column medium-6 large-6">
+                        <div class="grid-row">
+                            <div class="grid-column compact-6 small-6 medium-6 large-6">
+                                <div class="box">
+                                    <label data-translate="Sale total"></label>
+                                    <strong data-ng-bind="controller.saleOrder.total | currency"></strong>
+                                </div>
+                            </div>
+                            <div class="grid-column compact-6 small-6 medium-6 large-6">
+                                <div class="box">
+                                    <label data-translate="Billed amount"></label>
+                                    <strong data-ng-bind="controller.saleOrder.billedAmount | currency"></strong>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <label data-translate="Additional information"></label>
+                    <strong data-ng-bind-html="controller.saleOrder.additionalInformation | escapeHtml"></strong>
+                    <strong data-ng-hide="controller.saleOrder.additionalInformation">-</strong>
+                </div>
             </div>
         </div>
     </div>
