--- a/src/Dyoub.App/Views/Financial/CashFlow/MonthlyCashFlow.cshtml
+++ b/src/Dyoub.App/Views/Financial/CashFlow/MonthlyCashFlow.cshtml
@@ -69,6 +69,8 @@
                 <div class="grid-column tiny-2 compact-2 small-2 medium-2 large-2">
                     <p class="font-20 text-primary" data-ng-bind="month.baseDate | moment:'month'"></p>
                     <p class="text-muted font-11" data-ng-bind="month.baseDate | moment:'monthName'"></p>
+                    <strong data-ng-bind="month.balance | currency"
+                            data-ng-class="{ 'text-success': month.balance >= 0, 'text-danger': month.balance < 0 }"></strong>
                 </div>
                 <div class="grid-column tiny-10 compact-10 small-10 medium-10 large-10">
                     <div class="grid-row">
@@ -76,6 +78,12 @@
                             <div class="box">
                                 <label data-translate="Sales"></label>
                                 <strong data-ng-bind="month.sales | currency"></strong>
+                            </div>
+                        </div>
+                        <div class="grid-column compact-6 small-4 medium-4 large-2">
+                            <div class="box">
+                                <label data-translate="Rentals"></label>
+                                <strong data-ng-bind="month.rentContracts | currency"></strong>
                             </div>
                         </div>
                         <div class="grid-column compact-6 small-4 medium-4 large-2">
@@ -100,13 +108,6 @@
                             <div class="box">
                                 <label data-translate="Other debits"></label>
                                 <strong data-ng-bind="month.otherDebits | currency"></strong>
-                            </div>
-                        </div>
-                        <div class="grid-column compact-6 small-4 medium-4 large-2">
-                            <div class="box">
-                                <label data-translate="Balance"></label>
-                                <strong data-ng-bind="month.balance | currency"
-                                        data-ng-class="{ 'text-success': month.balance >= 0, 'text-danger': month.balance < 0 }"></strong>
                             </div>
                         </div>
                     </div>
