--- a/src/Dyoub.App/Views/Commercial/RentContracts/RentContractDetails.cshtml
+++ b/src/Dyoub.App/Views/Commercial/RentContracts/RentContractDetails.cshtml
@@ -99,7 +99,7 @@
                         <div class="grid-row">
                             <div class="grid-column compact-6 small-6 medium-6 large-6">
                                 <div class="box">
-                                    <label data-translate="Contract total value"></label>
+                                    <label data-translate="Rent total"></label>
                                     <strong data-ng-bind="controller.rentContract.total | currency"></strong>
                                 </div>
                             </div>
