--- a/src/Dyoub.App/Views/Inventory/PurchasePayments/PurchasePaymentsEdit.cshtml
+++ b/src/Dyoub.App/Views/Inventory/PurchasePayments/PurchasePaymentsEdit.cshtml
@@ -30,21 +30,27 @@
     <div class="loading box" data-ng-show="controller.searchingPayments"></div>
 
     <div class="ng-cloak" data-ng-show="controller.searchPaymentsComplete()">
-        <div class="error" data-ng-hide="controller.purchaseHasProducts()">
+        <div class="error" data-ng-show="controller.notFound">
             <i class="fa fa-exclamation-triangle"></i>
-            <p data-translate="This purchase order has no products."></p>
-            <a href="/purchase-orders/edit/{{controller.routeParams.purchaseOrderId}}/products"
-               class="as-button" data-translate="Add products"></a>
+            <p data-translate="Purchase order not found."></p>
+            <a href="/purchase-orders" class="as-button" data-translate="Go back"></a>
         </div>
 
-        <div class="error" data-ng-show="controller.confirmed">
+        <div class="error" data-ng-show="controller.purchaseOrder.confirmed">
             <i class="fa fa-exclamation-triangle"></i>
             <p data-translate="Purchase order already confirmed."></p>
             <a href="/purchase-orders/details/{{controller.routeParams.purchaseOrderId}}/payments"
                class="as-button primary" data-translate="Go to payment details"></a>
         </div>
 
-        <div data-ng-hide="controller.confirmed">
+        <div data-ng-hide="controller.notFound || controller.purchaseOrder.confirmed">
+            <div class="error" data-ng-hide="controller.purchaseHasProducts()">
+                <i class="fa fa-exclamation-triangle"></i>
+                <p data-translate="This purchase order has no products."></p>
+                <a href="/purchase-orders/edit/{{controller.routeParams.purchaseOrderId}}/products"
+                   class="as-button" data-translate="Add products"></a>
+            </div>
+
             <form name="controller.paymentsForm" data-ng-submit="controller.save()"
                   data-ng-show="controller.purchaseHasProducts()">
                 <div class="box">
@@ -61,20 +67,20 @@
                         <div class="grid-column small-4 medium-4 large-4">
                             <div class="box">
                                 <label data-translate="Purchase total"></label>
-                                <strong class="font-14 text-success" data-ng-bind="controller.total | currency"></strong>
+                                <strong class="font-14 text-success" data-ng-bind="controller.purchaseOrder.total | currency"></strong>
                             </div>
                         </div>
                         <div class="grid-column small-4 medium-4 large-4">
                             <div class="box">
                                 <label data-translate="Total payable"></label>
-                                <strong class="font-14 text-success" data-ng-bind="controller.totalPayable | currency"></strong>
+                                <strong class="font-14 text-success" data-ng-bind="controller.purchaseOrder.totalPayable | currency"></strong>
                             </div>
                         </div>
                         <div class="grid-column small-4 medium-4 large-4">
                             <div class="box">
                                 <label data-translate="Total paid"></label>
                                 <strong class="font-14" data-ng-class="{'text-success':controller.paidOut(),'text-danger':!controller.paidOut()}"
-                                        data-ng-bind="controller.totalPaid | currency"></strong>
+                                        data-ng-bind="controller.purchaseOrder.totalPaid | currency"></strong>
                             </div>
                         </div>
                     </div>
@@ -85,7 +91,7 @@
                                 <label>
                                     <span data-translate="Discount"></span> (%)
                                 </label>
-                                <input type="text" name="discount" data-ng-model="controller.discount"
+                                <input type="text" name="discount" data-ng-model="controller.purchaseOrder.discount"
                                        data-type-number="5,2" data-valid-number-min="0" data-valid-number-max="100"
                                        data-ng-change="controller.calculateTotalPayable()" />
                             </div>
@@ -93,14 +99,14 @@
                         <div class="grid-column small-4 medium-4 large-4">
                             <div class="box">
                                 <label data-translate="Shipping cost"></label>
-                                <input type="text" name="shippingCost" data-ng-model="controller.shippingCost"
+                                <input type="text" name="shippingCost" data-ng-model="controller.purchaseOrder.shippingCost"
                                        data-type-number="8,2" data-ng-change="controller.calculateTotalPayable()" />
                             </div>
                         </div>
                         <div class="grid-column small-4 medium-4 large-4">
                             <div class="box">
                                 <label data-translate="Other taxes"></label>
-                                <input type="text" name="otherTaxes" data-ng-model="controller.otherTaxes"
+                                <input type="text" name="otherTaxes" data-ng-model="controller.purchaseOrder.otherTaxes"
                                        data-type-number="8,2" data-ng-change="controller.calculateTotalPayable()" />
                             </div>
                         </div>
@@ -111,7 +117,7 @@
                      data-ng-show="controller.noPayments()"></div>
 
                 <div class="card list">
-                    <div class="list-item" data-ng-repeat="payment in controller.paymentList">
+                    <div class="list-item" data-ng-repeat="payment in controller.purchaseOrder.paymentList">
                         <div class="grid-row" data-ng-form="paymentForm">
                             <div class="grid-column small-4 medium-4 large-4">
                                 <div class="box" data-has-error="paymentForm.total.$invalid">
