--- a/src/Dyoub.App/Views/Inventory/PurchasedProducts/PurchasedProductsDetails.cshtml
+++ b/src/Dyoub.App/Views/Inventory/PurchasedProducts/PurchasedProductsDetails.cshtml
@@ -32,57 +32,65 @@
     <div class="loading box" data-ng-show="controller.searching"></div>
 
     <div class="ng-cloak" data-ng-show="controller.searchComplete()">
-        @using (Html.Authorize("purchase-orders.edit"))
-        {
-            <div class="box">
-                <a href="/purchase-orders/edit/{{controller.purchaseOrder.id}}/products" class="as-button" data-translate="Edit"
-                   data-ng-hide="controller.purchaseOrder.confirmed"></a>
-            </div>
-        }
-
-        <div class="box">
-            <span class="hint success" data-translate="Confirmed" data-ng-show="controller.purchaseOrder.confirmed"></span>
+        <div class="error" data-ng-show="controller.notFound">
+            <i class="fa fa-exclamation-triangle"></i>
+            <p data-translate="Purchase order not found."></p>
+            <a href="/purchase-orders" class="as-button" data-translate="Go back"></a>
         </div>
 
-        <div class="card list">
-            <div class="list-item text-primary text-center" data-translate="At least one product must be added."
-                 data-ng-show="controller.purchaseOrder.productList.isEmpty()"></div>
-
-            <div class="list-item" data-ng-repeat="product in controller.purchaseOrder.productList">
+        <div data-ng-hide="controller.notFound">
+            @using (Html.Authorize("purchase-orders.edit"))
+            {
                 <div class="box">
-                    <p data-ng-bind="product.name"></p>
-                    <span class="font-11 text-muted">
-                        <i class="fa fa-barcode"></i>
-                        <span data-ng-bind="product.code"></span>
-                        <span data-ng-hide="product.code" data-translate="No code"></span>
-                    </span>
+                    <a href="/purchase-orders/edit/{{controller.purchaseOrder.id}}/products" class="as-button" data-translate="Edit"
+                       data-ng-hide="controller.purchaseOrder.confirmed"></a>
                 </div>
+            }
 
-                <div class="grid-row">
-                    <div class="grid-column small-6 medium-6 large-6">
-                        <div class="grid-row">
-                            <div class="grid-column compact-6 small-6 medium-6 large-6">
-                                <label data-translate="Unit cost"></label>
-                                <strong data-ng-bind="product.unitCost | currency"></strong>
-                            </div>
-                            <div class="grid-column compact-6 small-6 medium-6 large-6">
-                                <label data-translate="Amount"></label>
-                                <strong data-ng-bind="product.quantity | number:3"></strong>
+            <div class="box">
+                <span class="hint success" data-translate="Confirmed" data-ng-show="controller.purchaseOrder.confirmed"></span>
+            </div>
+
+            <div class="card list">
+                <div class="list-item text-primary text-center" data-translate="At least one product must be added."
+                     data-ng-show="controller.purchaseOrder.productList.isEmpty()"></div>
+
+                <div class="list-item" data-ng-repeat="product in controller.purchaseOrder.productList">
+                    <div class="box">
+                        <p data-ng-bind="product.name"></p>
+                        <span class="font-11 text-muted">
+                            <i class="fa fa-barcode"></i>
+                            <span data-ng-bind="product.code"></span>
+                            <span data-ng-hide="product.code" data-translate="No code"></span>
+                        </span>
+                    </div>
+
+                    <div class="grid-row">
+                        <div class="grid-column small-6 medium-6 large-6">
+                            <div class="grid-row">
+                                <div class="grid-column compact-6 small-6 medium-6 large-6">
+                                    <label data-translate="Unit cost"></label>
+                                    <strong data-ng-bind="product.unitCost | currency"></strong>
+                                </div>
+                                <div class="grid-column compact-6 small-6 medium-6 large-6">
+                                    <label data-translate="Amount"></label>
+                                    <strong data-ng-bind="product.quantity | number:3"></strong>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="grid-column small-6 medium-6 large-6">
-                        <div class="grid-row">
-                            <div class="grid-column compact-6 small-6 medium-6 large-6">
-                                <label data-translate="Discount"></label>
-                                <strong data-ng-show="product.discount">
-                                    <span data-ng-bind="product.discount | number:2"></span>%
-                                </strong>
-                                <strong data-ng-hide="product.discount">-</strong>
-                            </div>
-                            <div class="grid-column compact-6 small-6 medium-6 large-6">
-                                <label data-translate="Total cost"></label>
-                                <strong data-ng-bind="product.totalCost | currency"></strong>
+                        <div class="grid-column small-6 medium-6 large-6">
+                            <div class="grid-row">
+                                <div class="grid-column compact-6 small-6 medium-6 large-6">
+                                    <label data-translate="Discount"></label>
+                                    <strong data-ng-show="product.discount">
+                                        <span data-ng-bind="product.discount | number:2"></span>%
+                                    </strong>
+                                    <strong data-ng-hide="product.discount">-</strong>
+                                </div>
+                                <div class="grid-column compact-6 small-6 medium-6 large-6">
+                                    <label data-translate="Total cost"></label>
+                                    <strong data-ng-bind="product.totalCost | currency"></strong>
+                                </div>
                             </div>
                         </div>
                     </div>
