--- a/src/Dyoub.App/Views/Inventory/PurchasedProducts/PurchasedProductsEdit.cshtml
+++ b/src/Dyoub.App/Views/Inventory/PurchasedProducts/PurchasedProductsEdit.cshtml
@@ -27,27 +27,33 @@
         </div>
     </div>
 
-    <div class="error ng-cloak" data-ng-show="controller.confirmed">
-        <i class="fa fa-exclamation-triangle"></i>
-        <p data-translate="Purchase order already confirmed."></p>
-        <a href="/purchase-orders/details/{{controller.routeParams.purchaseOrderId}}/products"
-           class="as-button primary" data-translate="Go to products details"></a>
-    </div>
+    <div class="loading box" data-ng-show="controller.searchingSelectedProducts"></div>
 
-    <div class="ng-cloak" data-ng-hide="controller.confirmed">
-        <div class="box">
-            <button type="button" class="success" data-ng-disabled="controller.saveBlocked()"
-                    data-ng-click="controller.save()">
-                <span data-ng-hide="controller.saving" data-translate="Save"></span>
-                <span data-ng-show="controller.saving" data-translate="Saving"></span>
-            </button>
-            <a href="/purchase-orders/details/{{controller.routeParams.purchaseOrderId}}/products"
-               class="as-button" data-ng-disabled="controller.saving" data-translate="Cancel"></a>
+    <div data-ng-show="controller.searchSelectedProductsComplete()">
+        <div class="error" data-ng-show="controller.notFound">
+            <i class="fa fa-exclamation-triangle"></i>
+            <p data-translate="Purchase order not found."></p>
+            <a href="/purchase-orders" class="as-button" data-translate="Go back"></a>
         </div>
 
-        <div class="loading box" data-ng-show="controller.searchingSelectedProducts"></div>
+        <div class="error ng-cloak" data-ng-show="controller.purchaseOrder.confirmed">
+            <i class="fa fa-exclamation-triangle"></i>
+            <p data-translate="Purchase order already confirmed."></p>
+            <a href="/purchase-orders/details/{{controller.routeParams.purchaseOrderId}}/products"
+               class="as-button primary" data-translate="Go to products details"></a>
+        </div>
 
-        <div data-ng-show="controller.searchSelectedProductsComplete()">
+        <div class="ng-cloak" data-ng-hide="controller.notFound || controller.purchaseOrder.confirmed">
+            <div class="box">
+                <button type="button" class="success" data-ng-disabled="controller.saveBlocked()"
+                        data-ng-click="controller.save()">
+                    <span data-ng-hide="controller.saving" data-translate="Save"></span>
+                    <span data-ng-show="controller.saving" data-translate="Saving"></span>
+                </button>
+                <a href="/purchase-orders/details/{{controller.routeParams.purchaseOrderId}}/products"
+                   class="as-button" data-ng-disabled="controller.saving" data-translate="Cancel"></a>
+            </div>
+
             <div class="card">
                 <div class="box">
                     <label data-translate="Product name or code"></label>
@@ -75,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="list-header text-left" data-ng-show="controller.productList.any()">
+            <div class="list-header text-left" data-ng-show="controller.purchaseOrder.productList.any()">
                 <span data-translate="Purchase total"></span>:
                 <strong class="font-14 text-success" data-ng-bind="controller.calculateTotalCost() | currency"></strong>
             </div>
@@ -85,7 +91,7 @@
 
             <form name="controller.purchaseOrderProductsForm">
                 <div class="card list">
-                    <div class="list-item" data-ng-repeat="product in controller.productList | orderBy:'name'">
+                    <div class="list-item" data-ng-repeat="product in controller.purchaseOrder.productList | orderBy:'name'">
                         <div class="box">
                             <button type="button" class="danger pull-right" data-translate="Remove"
                                     data-ng-click="controller.showRemoveProductDialog(product)"></button>
